--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Resume Page</title>
   </head>
   <body>
-    <section class="flex-parent">
+    <!--This is the first upper section of the page-->
+    <section class="flex-parent"> <!--This is the parent flex section -->
         <div class="flex-child">
             <img src="profile-image.jpg" />
       </div>
@@ -27,6 +28,7 @@
         
       </div>
     </section>
+    <!--This is the second section as an article in th page-->
     <article class="flex-parent2">
       <div class="flex-child2">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus
@@ -39,7 +41,7 @@
       </div>
 
     </article>
-
+    <!--This is the third section as an article in th page-->
     <section class="flex-parent3">
       <div class="flex-child3">
       <img class="drop-image" src="down-arrow.png" alt="drop down image fro selecting"  />
