--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p class="p1">Programmer</p>
 <br>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Reprehenderit aspernatur  eaque debitis! Doloribus eveniet non perferendis, aut nobis, vero perspiciatis repudiandae, <br>dolores dolorem pariatur fuga expedita facilis alias eum cupiditate!</p>
-
+<!--this image is for the selection dropdown-->
                   <img class="drop-image" src="dropdown-image.png" alt="drop down image fro selecting"  />
             <select class="selection" name="employment">
                   <option>Education</option>
