--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--<link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" /> 
     <title>Resume Page</title>
   </head>
   <body>
@@ -74,12 +74,15 @@
                   <option value="oxford">Oxford</option>
                 </select>
                 <br> <br> <br>
+                <!--These duplicated images are for the text side images -->
                 <img class="drop-image" src="green-button.png" alt="side image"/>
                 <h2>Lorem ipsum, dolor sit amet consectetur.</h2>
                 <p class="p1">Web Design</p>
              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Reprehenderit aspernatur eaque debitis! Doloribus eveniet non perferendis, aut nobis, vero perspiciatis repudiandae,
                   dolores dolorem pariatur fuga expedita facilis alias eum cupiditate!</p>
+
+                  <!--This side of the page contains a screenshot image of the project-->
                   <img class="drop-image" src="green-button.png" alt="side image"/>
                 <h2>Lorem amet consectetur adipisicing elit.</h2>
                 <p class="p1">Graphic Design</p>
