--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </div>      
         <div class="flex-child"> 
           <p><strong class="side-text">Name:</strong>  Thrones James</p>
-            <p><strong class="side-text"> Date of Birth:</strong> November 3, 2023.</p>
+            <p><strong class="side-text"> Date of Birth:</strong> November 3, 2023</p>
             <p><strong class="side-text"> Address:</strong> New York, NY</p>
             <p><strong class="side-text"> Phone:</strong> 
               (666)616-6166</p>
-            <p><strong class="side-text"> Email:</strong> jamesofthorn@hbo.com</p></div>
+            <p><strong class="side-text"> Email:</strong> jamesofthrones@hbo.com</p></div>
         
       </div>
     </section>
@@ -46,7 +46,7 @@
       <div class="flex-child3">
       <img class="drop-image" src="down-arrow.png" alt="drop down image fro selecting"  />
             <select class="selection" name="employment">
-                  <option>Employment</option>
+                  <option>EMPLOYMENT</option>
                   <option value="software-engineer">Software Engineer</option>
                   <option value="projectmanager">Project Manager</option>
                   <option value="teacher">Teacher</option>
@@ -67,7 +67,7 @@
 <!--this image is for the selection dropdown-->
                   <img class="drop-image" src="dropdown-image.png" alt="drop down image fro selecting"  />
             <select class="selection" name="employment">
-                  <option>Education</option>
+                  <option>EDUCATION</option>
                   <option value="harvard">Harvard</option>
                   <option value="stanford">Stanford</option>
                   <option value="yale">Yale</option>
